--- a/public/404.html
+++ b/public/404.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sorry baller, the page you were looking for doesn't exist (404)</title>
+  <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+  img {
+    width: 700px;
+  }
 
+  .error{
+    display: flex;
+    justify-content: center;
+  }
+
+  </style>
 </head>
 
-<body >
-  <div class="w-100">
-    <img src="assets/error404.webp" alt="error image">
+<body>
+  <!-- This file lives in public/404.html -->
+  <div class="error">
+    <img src="assets/error404.webp" alt="error img">
   </div>
 </body>
 </html>
