--- a/public/404.html
+++ b/public/404.html
@@ -5,12 +5,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   img {
-    width: 700px;
+    width: 600px;
   }
 
   .error{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height
   }
 
   </style>
@@ -19,7 +22,9 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="error">
-    <img src="assets/error404.webp" alt="error img">
+    <h1>Error 404: page not found</h1>
+    <h1>Sorry MeetBaller</h1>
+    <img src="assets/IMG_9183.JPG" alt="error img">
   </div>
 </body>
 </html>
